@@ -12,7 +12,7 @@
 }
 \usage{
 texi2dvi(file, pdf = FALSE, clean = FALSE, quiet = TRUE,
-         texi2dvi = getOption("texi2dvi"))
+         texi2dvi = getOption("texi2dvi"), texinputs = NULL)
 }
 \arguments{
   \item{file}{character.  Name of LaTeX source file.}
@@ -21,23 +21,29 @@ texi2dvi(file, pdf = FALSE, clean = FALSE, quiet = TRUE,
   \item{clean}{logical.  If \code{TRUE}, all auxiliary files are removed
     (\code{texi2dvi} command line option \option{--clean}).  May not work on
     some platforms.}
-  \item{quiet}{logical.  No output unless an error occurs.}
+  \item{quiet}{logical.  No output unless an error occurs.  Ignored if
+    emulation (see the \code{texi2dvi} argument) is used.}
   \item{texi2dvi}{character (or \code{NULL}).  Script or program used to
     compile a TeX file to dvi or PDF, respectively.
     The default (selected by \code{NULL}) is to look for an executable
     on the search path and otherwise emulate the script with
     \code{system} calls.}
+  \item{texinputs}{\code{NULL} or a character vector of paths to add to
+    the LaTeX and bibtex input search paths.}
 }
 \details{
   Despite the name, this is used in \R to compile LaTeX files,
   specifically those generated from vignettes.  As from \R 2.8.0 it
   ensures that the \file{\var{\link{R\_HOME}}/share/texmf} directory is
   in the \env{TEXINPUTS} path, so \R style files such as \file{Sweave}
-  and \file{Rd} will be found.
+  and \file{Rd} will be found.  The search path used is first the
+  elements of \code{texinputs}, then \file{\var{R\_HOME}/share/texmf}
+  and finally the existing \env{TEXINPUTS} or \env{BIBINPUTS} setting.
 #ifdef windows
   
   MiKTeX has a \code{texi2dvi} executable, but no other Windows TeX
-  installation that we know of does.
+  installation that we know of does, so emulation is used on TeXLive
+  installations.
 #endif
 }
 \author{Achim Zeileis}
